--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.application.name=DevosTest1
-server.port=8082
+spring.application.name=DevosTest
+spring.profiles.active=dev
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.driver-class-name=com.mysql.cj.jdbc.Driver
